@@ -855,7 +855,9 @@ static void select_best_video_mode(int *best_w, int *best_h)
 	int i;
 	int dratio;
 
-	dratio = 100*display_w/display_h;
+	/* with 100 odd resolutions like 1366x768 will be selected
+	 * with 1000 (first decimal must match) these are ruled out */
+	dratio = 1000*display_w/display_h;
 	wanted_mode.w = display_w;
 	wanted_mode.h = display_h;
 
@@ -878,7 +880,7 @@ static void select_best_video_mode(int *best_w, int *best_h)
 
 		/* select lowest mode with same ratio as display */
 		for(i=0;modes[i];++i)
-			if (100*modes[i]->w/modes[i]->h == dratio) {
+			if (1000*modes[i]->w/modes[i]->h == dratio) {
 				if (modes[i]->h < wanted_mode.h)
 					wanted_mode = *modes[i];
 			}
